<resources>
    <string name="app_name">Khartoum Tour Guide</string>
    <string name="get_in">Get In</string>
    <string name="get_around">Get around</string>
    <string name="see">See</string>
    <string name="eat">Eat</string>
    <string name="drink">Drink</string>
    <string name="cope">Cope</string>
    <string name="night_mode">Night Mode</string>
    <string name="overview">Overview</string>
    <string name="overview_text"> <p>   <b>Khartoum</b> (Arabic: الخرطوم <i>Al-Khartum</i>) is the capital of Sudan and is located where the Blue and White Niles merge to form the Nile. The huge, spread-out city is actually made out of three distinct cities (<b>Khartoum</b>, <b>Khartoum North</b> or <b>Bahri</b>, and <b>Omdurman</b>) which are divided by the Nile and its two arms. The Blue Nile flows between Khartoum and Bahri, the White Nile between Khartoum and Omdurman, and the merged Nile between Bahri and Omdurman. The confluence of the Blue and White Nile, known as Al-Mogran, lies just north of the bridge between Khartoum and Omdurman.
</p> <br /> <p>Khartoum proper is the seat of the Sudanese government and is the largest of the three cities. The older part of the city lies beside the White Nile while the newer parts, such as Al-Amarat and Khartoum Two, spread out to the south, across the railway line and the ring road, and around the airport runway. The city, both the old part and its newer extensions, is laid out mostly in a grid. Omdurman has a more Middle Eastern atmosphere with maze-like streets and is home to the huge Souq Omdurman. Bahri is largely industrial and residential.
</p></string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer closed</string>
    <string name="by_plane">By plane</string>
    <string name="by_plane_text"><p>     <b>Khartoum Airport</b> (<b>KRT</b>). Is the main gateway into Sudan by air. The airport is served by various European, Middle Eastern and African airlines. Among the cities with direct connections with Khartoum are: British Airways (with connections to London), EgyptAir (Cairo), Emirates (Dubai), Ethiopian Airlines (Addis Ababa), Gulf Air (Bahrain), Kenya Airlines (Nairobi), KLM (Amsterdam), Lufthansa (Frankfurt), Qatar Airways (Doha) Turkish Airlines (Istanbul, on Tuesdays, Fridays, Sundays).</p> <br />\n        <p> \n\nSudan\'s national carrier Sudan Airways links Khartoum and several African and regional capitals, and with Sudan\'s domestic airports at Port Sudan, Nyala, El-Fashir, Malakal, Juba, Dongola, Wadi Halfa and El-Obeid.</p><br />\n\n<p> Go early as the airport can get a bit chaotic. Be prepared for long waits and queue cutting. Immigration checks and other security checks can also take a long time. No departure tax should be paid anymore, as it\'s included in a ticket price.</p><br />\n\n<p> There is a bank facility to change money open during the night when there are flights.\n\n    <b>Getting there/away</b>: airport is located close to the city in Al-Amarat. Taxi fare from Khartoum airport to city was a fixed SDG 100 in 2015. You can also walk out to the main road about 200 m from the airport terminal and catch minibuses that cruise along the road.</p></string>
    <string name="by_bus">By bus</string>
    <string name="by_bus_text"><p>The chaotic Souq al-Shaabi used to be the main bus terminal for long distance south-bound buses in Khartoum, but a new terminal <b>Khartoum Land terminal</b> (Meena al Barre) has been built which is more orderly. Buses leave for Port Sudan, Wad Medani, Kassala, El-Obeid, Karima (8 hr, SGD 275), Gedarif (6 hr, SGD 275) and other cities. Again, there are no buses to southern Sudan. </p> <br />
    <p>Buses from Aswan travel 24 hours, 450 EGP.</p> <br />
        <p>Buses to Atbara depart from <b>Khartoum North Bus Station</b> (also known as Shendi Bus Station).</p></string>
    <string name="by_train">By train</string>
    <string name="by_train_text"><p>Rail services to Khartoum are limited, but investment have brought hopes of a rejuvenation of train travel.</p><br /> <p> There is the daily Nile Express from Atbara as well as services three times per day from Wad Madani. Older, more infrequent trains run from Port Sudan, Wadi Halfa - for connections with ferries from Egypt - and even Nyala. There main station is <b>Khartoum North (Bahri).</b></p></string>
    <string name="by_car">By car</string>
    <string name="by_car_text"><p>The main tarred road goes south from Khartoum to Wad Medani then east to Gedaref (for the Ethiopian border at Gallabat), Kassala (for the Eritrean border, which is closed) and then to Port Sudan. South from Khartoum, a road also goes to El-Obeid, which then continues west towards the Chadian border via Darfur, which is a bit dangerous to use. From the north, the road comes in from Wadi Halfa via Atbara.</p> <br /> <p>There are no road links to southern Sudan. The only option is to fly.</p></string>
    <string name="by_boat">By boat</string>
    <string name="by_boat_text"> <p> There are no boat services along the Nile to destinations outside Khartoum. </p> </string>
    <string name="get_around_overview"><p>Khartoum is both easy and difficult to get around. It is easy in that much of the city is laid out on a grid, with long straight roads and the airport and Nile as easy reference places. It is difficult in that the city (or indeed the 3 cities) are very spread out, making walking a long and tiring option. </p> <br /> <p>Maps are hard to come by, but Google Earth offers some good high-resolution images.</p></string>
    <string name="by_taxi">By taxi</string>
    <string name="by_taxi_text"><p>These come in three varieties; bright yellow and often beaten up Toyota Corollas Model 1977, small 6-seater minivans, and modern comfortable air conditioned metred cabs (operated by LimoTrip 00249 183 591 313 or info@limotrip.net - rates are reasonable by meter only and saves the haggling; the cabs are also radio controlled). Apart from metered taxis, taxi drivers <i>always</i> overcharge the  foreigner.
</p><br />  <p>Fair \'foreigner\' prices for taxis are roughly: SDG 17.50 plus SDG 4.61 per km.
</p><br /><p>Crossing the river will usually double the price.
</p><br /><p>Most taxi drivers speak no English, can\'t read maps, and often can\'t read Arabic either; they often even have little idea about Khartoum\'s geography, especially about other parts of the city to where you pick him up.
</p></string>
    <string name="by_minibus">By minibus</string>
    <string name="by_minibus_text"> <p>Minibuses are the cheapest way to get around Khartoum, especially between the three cities. There are easily thousands of minibuses and seeing all of them gather near the Great Mosque and Souk al-Arabi is a sight to behold. They are however quite complicated to use. None of them bear destination signs and you will have to be able to speak a little Arabic with their conductors to determine which minibus to take. They are also always packed to the brim. Fares are SDG 3-5 (June 2017).
</p> <br /><p>Most of the minibuses leave from the square near the Great Mosque (Mesjid al-Kabir) or nearby in Khartoum proper.
</p></string>
    <string name="by_car_text_get_around"> <p>Describing Khartoum\'s traffic as chaotic is a bit of an understatement. The economic boom has put many more cars on the road, although driving attitudes have not changed, resulting in almost comical chaos at intersections. As Khartoum is laid out in a grid, there are many intersections for cars from all directions to barge in to fight for space. Having said that, the slow speed of vehicles ensures that they are very few major accidents, at least in the city. If you are not used to such driving conditions, it is better to resort to taxis.
</p><br /> <p><b>Car hire</b> is available and costs a bit above the African average.  However if you want to head off in to the desert the costs mount further, as the 100km is standard, and then there is an additional charge per kilometre. Fuel costs around SDG 27 (US$4.20) per litre (Nov 2016).  ‘Limousine’ is the Arabic word for car hire – try along Airport Road or Ibed Khetim Road (east of the airport) for car hire places.
</p></string>
    <string name="by_three_wheeled_taxis">By three-wheeled taxis</string>
    <string name="by_three_wheeled_taxis_text"> <p>Called "bajaj" (like in India) or "raksha", they are cheaper than taxis but more expensive than buses so less than SDG 5 per trip. They are best used for short trips within each of Khartoum\'s three cities. It is better to use taxis or minibuses if you have to cross the Nile to travel between the three cities.
</p></string>
    <string name="by_boat_text_get_around"> <p>There are no ferry services between the three cities as they are well connected by road bridges.
</p> <br /> <p>There is a ferry service between Khartoum proper and Tuti Island, a rural islet in the middle of the Blue Nile. In Khartoum, boats leave from the river bank along Nile Street opposite the Friendship Hall to the west of the city center. A ferry also runs between Tuti and Omdurman (except on Fridays)
</p></string>
    <string name="khartoum">Khartoum</string>
    <string name="omdurman">Omdurman</string>
    <string name="bahri">Bahri</string>
    <string name="title_activity_details">Details</string>
</resources>