<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingTop="8dp"
    android:paddingBottom="32dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            style="@style/TitleTextStyle"
            android:text="@string/by_plane"
            app:drawableStartCompat="@drawable/ic_by_plane"
            app:drawableTint="?attr/colorAccent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView2"
            style="@style/BodyTextStyle"
            android:text="@string/by_plane_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView3"
            style="@style/TitleTextStyle"
            android:text="@string/by_bus"
            app:drawableStartCompat="@drawable/ic_by_bus"
            app:drawableTint="?attr/colorAccent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView4"
            style="@style/BodyTextStyle"
            android:text="@string/by_bus_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView5"
            style="@style/TitleTextStyle"
            android:text="@string/by_train"
            app:drawableStartCompat="@drawable/ic_by_train"
            app:drawableTint="?attr/colorAccent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView6"
            style="@style/BodyTextStyle"
            android:text="@string/by_train_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView7"
            style="@style/TitleTextStyle"
            android:text="@string/by_car"
            app:drawableStartCompat="@drawable/ic_by_car"
            app:drawableTint="?attr/colorAccent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView8"
            style="@style/BodyTextStyle"
            android:text="@string/by_car_text" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView9"
            style="@style/TitleTextStyle"
            android:text="@string/by_boat"
            app:drawableStartCompat="@drawable/ic_by_boat"
            app:drawableTint="?attr/colorAccent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView10"
            style="@style/BodyTextStyle"
            android:text="@string/by_boat_text" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>